# democlean

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
democlean/: __init__.py  cli.py  mi.py  scorer.py
democlean/embeddings/: __init__.py  base.py  hpt.py  raw.py
scripts/: validate_hpt.py
tests/: test_cli.py  test_embeddings.py  test_integration.py  test_mi.py  test_scorer.py
