[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "democlean"
version = "0.2.0"
description = "Score robot demonstrations by motion quality"
readme = "README.md"
license = "MIT"
authors = [{ name = "Dipam Paul", email = "dipampaul17@gmail.com" }]
keywords = ["robotics", "lerobot", "data-quality", "imitation-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "lerobot>=0.4.0",
    "tqdm>=4.65",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
hpt = ["torch>=2.0"]
all = ["democlean[dev,hpt]"]

[project.scripts]
democlean = "democlean.cli:main"

[project.urls]
Homepage = "https://github.com/dipampaul17/democlean"
Documentation = "https://github.com/dipampaul17/democlean#readme"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
